# deployment-manager

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  add_to_path.ps1  ai_agent.yaml  api.py  deployment_tool.py  dummy_mapping.yaml  install.ps1  install.sh  logic.py  mapping.yaml  prd_install.md  pyproject.toml  rossum_client.py  try_claude.py
.github/: CODEOWNERS  cliff.toml
.github/workflows/: autotag.yml  python-app.yml  release-on-autotag.yml  release-on-manual.yml  release.yml  test.yml
deployment_manager/: main.py
deployment_manager/ai_agent/: __init__.py  assistant.py  config.py  runner.py  runtime.py  tmux.py
deployment_manager/ai_agent/assets/: agent.md  ai_agent.yaml
deployment_manager/ai_agent/llm/: base.py  bedrock.py  factory.py  gemini.py
deployment_manager/ai_agent/logs/: sources.py
deployment_manager/ai_agent/plugins/: base.py  deploy.py
deployment_manager/ai_agent/skills/: loader.py
deployment_manager/ai_agent/utils/: json_utils.py  object_types.py  tables.py
deployment_manager/commands/: initialize.py  migrate_mapping.py  update.py
deployment_manager/commands/deploy/: ai_agent.py  deploy.py
deployment_manager/commands/document/: document.py  extensions_chain.py  func.py  llm_helper.py
deployment_manager/commands/download/: __init__.py  directory.py  download.py  downloader.py  email_templates.py  helpers.py  hooks.py  remover.py  saver.py  schemas.py  subdirectory.py  types.py  workspaces.py
deployment_manager/commands/hook/: helpers.py  hook.py  payload.py  sync.py  test.py
deployment_manager/commands/llm_chat/: helpers.py  llm_chat.py  local_retriever.py
deployment_manager/commands/migrate/: helpers.py
deployment_manager/commands/purge/: delete_objects.py  directory.py  purge.py
deployment_manager/commands/upload/: dependencies.py  directory.py  models.py  upload.py
deployment_manager/common/: attribute_override.py  client.py  custom_client.py  determine_path.py  get_filepath_from_user.py  git.py  mapping.py  modified_at.py  questionary_functions.py  read_write.py  rossum_client.py  schema.py  upload_download_setup.py
deployment_manager/utils/: consts.py  functions.py  logging.py
id_doc_test/: prd_config.yaml
project_rossum_deploy/: .env.example  dummy_config.yaml  dummy_credentials.json  dummy_visualization.html  main.py
project_rossum_deploy/commands/: download.py  initialize.py  migrate.py  migrate_mapping.py  update.py  upload.py  visualize.py
project_rossum_deploy/commands/deploy/: attribute_override.py  deploy.py  helpers.py  hook_release.py  object_release.py  queue_release.py  schema_release.py  upload_helpers.py  workspace_release.py
project_rossum_deploy/commands/download/: directory.py  download.py  downloader.py  email_templates.py  helpers.py  hooks.py  mapping.py  saver.py  schemas.py  (+2 more)
project_rossum_deploy/common/: attribute_override.py  client.py  git.py  mapping.py  migrate_config.py  modified_at.py  read_write.py  upload.py  upload_download_setup.py  write.py
project_rossum_deploy/utils/: consts.py  formula_builtins.py  functions.py
rossum_api/: api_client.py
rossum_api/models/: queue.py
tests/: conftest.py  test_attribute_override.py  test_download.py  test_migrate.py  test_upload.py
tests/download/: conftest.py  test_saver.py
tests/integration/: test_deploy.py  test_deploy_advanced.py  test_deploy_secrets.py  test_pull.py  test_pull_advanced.py  test_purge.py  test_push.py  test_push_advanced.py  test_revert.py  virtual_api.py
tests/reference_project/: mapping.yaml  prd_config.yaml
tests/test_data/: workspace.json
tests/upload/: conftest.py  test_detect_changes.py  utils.py
tests/utils/: compare.py  consts.py  functions.py
(+629 files in other folders)
