[tool.poetry]
name = "deployment-manager"
version = "0.0.0"
description = ""
authors = [
    "Miroslav Rehounek <miroslav.rehounek@rossum.ai>",
    "Jan Sporek <jan.sporek@rossum.ai>",
    "Ondrej Polesny <ondrej.polesny@rossum.ai>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.25.2"
rossum-api = { git = "https://github.com/rossumai/rossum-sdk" }
click = "^8.1.7"
pyyaml = "^6.0.1"
anyio = "^4.2.0"
rich = "^13.7.0"
jmespath = "^1.0.1"
ruamel-yaml = "^0.18.6"
pydantic = "^2.9.2"
questionary = "^2.0.1"

[tool.poetry.scripts]
prd2 = "deployment_manager.main:main"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.7"
ruff = "^0.5.0"
pre-commit = "^3.7.1"
pytest-dotenv = "^0.5.2"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["dummy_project", "dist"]

[tool.pytest]
env_files = [".env"]
