[tool.poetry]
name = "deployment-manager"
version = "0.0.0"
packages = [
    { include = "deployment_manager" },    # Keeps main package
    { include = "rossum_api" },
]


# Force Poetry to include rossum_api, even if it's in .gitignore
include = ["rossum_api/**/*"]

description = ""
authors = [
    "Miroslav Rehounek <miroslav.rehounek@rossum.ai>",
    "Jan Sporek <jan.sporek@rossum.ai>",
    "Ondrej Polesny <ondrej.polesny@rossum.ai>",
]
license = "MIT"
readme = "README.md"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
pattern = "v(?P<base>\\d+\\.\\d+\\.\\d+)"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.25.2"
click = "^8.1.7"
pyyaml = "^6.0.1"
anyio = "^4.2.0"
rich = "^13.7.0"
jmespath = "^1.0.1"
ruamel-yaml = "^0.18.6"
pydantic = "^2.9.2"
questionary = "^2.0.1"
boto3 = "^1.37.30"

# Moved from `rossum_api` dependencies:
tenacity = "^8.2.3"
datamodel-code-generator = "^0.21.2"
fastapi = "^0.100.0"
uvicorn = "^0.20.0"
diagrams = "^0.24.4"

[tool.poetry.scripts]
prd2 = "deployment_manager.main:main"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.7"
ruff = "^0.5.0"
pre-commit = "^4.0.1"
pytest-dotenv = "^0.5.2"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.ruff]
exclude = ["dummy_project", "dist", "rossum_api"]

[tool.pytest]
env_files = [".env"]
